platform/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assessment
  namespace: assessment
spec:
  selector:
    app: assessment
  ports:
    - name: http
      port: 80
      targetPort: http
