platform/k8s/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # ArgoCD needs this for its internal routing
    traefik.ingress.kubernetes.io/router.middlewares: argocd-repo-server-header@kubernetescrd
spec:
  ingressClassName: traefik-internal
  rules:
  - host: argocd.k8s.hraedon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
  tls:
  - hosts:
    - argocd.k8s.hraedon.com
    secretName: argocd-server-tls
