platform/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assessment
  namespace: assessment
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik-external
  rules:
    - host: learning.hraedon.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: assessment
                port:
                  name: http
  tls:
    - hosts:
        - learning.hraedon.com
      secretName: learning-tls
